--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,11 +10,17 @@
 .main {
   padding: 5rem 0;
   flex: 1;
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.main h1 {
+  font-size: 2rem;
+}
+.main section {
+  max-width: 100%;
 }
 
 .footer {
