--- a/src/Components/TateIntro/TateIntro.module.css
+++ b/src/Components/TateIntro/TateIntro.module.css
@@ -1,6 +1,6 @@
 .contentContainer {
   margin: 24px;
-  max-width: 700px;
+
 }
 
 .githubLink {
@@ -12,9 +12,8 @@
   justify-content: space-between;
   max-width: 400px;
 }
-.contentCentered {
-  max-width: 400px;
+.linkContainer {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
+  align-items: center;
 }
